[package]
name = "dome-red-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "=0.1.81"
downcast-rs = "=1.2.1"
hex = "=0.4.3"
path-clean = "=1.0.1"
serde = { version = "=1.0.204", features = ["derive"] }
serde_json = "=1.0.120"
sha1 = "=0.11.0-pre.3"
shellish_parse = "2.2.0"
sysinfo = "=0.30.13"
tokio = { version = "=1.38.0", features = ["full"] }
tonic = { version = "=0.12.0" }
