[package]
name = "ensemb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "=0.1.83"
downcast-rs = "=1.2.1"
hex = "=0.4.3"
path-clean = "=1.0.1"
serde = { version = "=1.0.210", features = ["derive"] }
serde_json = "=1.0.132"
sha1 = "=0.11.0-pre.4"
shellish_parse = "2.2.0"
tokio = { version = "=1.40.0", features = ["full"] }
tonic = { version = "=0.12.3" }
